--- a/LMS/Views/Shared/_AdminLteBreadcrumb.cshtml
+++ b/LMS/Views/Shared/_AdminLteBreadcrumb.cshtml
@@ -1,9 +1,4 @@
-﻿@* 
- This breadcrumb partial is meant to be dropped into the top of the main content page
-    and uses the AdminLte.Breadcrumb class to dynamically build the breadcrumb per page
-*@
-
-@if (ViewBag.Breadcrumb != null)
+﻿@if (ViewBag.Breadcrumb != null)
 {
     <ol class="breadcrumb">
         @foreach (Crumb crumb in ViewBag.Breadcrumb)
