--- a/LMS/Views/Shared/_AdminLteLayout.cshtml
+++ b/LMS/Views/Shared/_AdminLteLayout.cshtml
@@ -1,17 +1,10 @@
-﻿@* 
- This is the main dashboard layout that creates the AdminLTE look and feel
-    It includes all of the relevant CSS and Js in this project and across CDNs around the web for optimal load times
-    TODO: Use this layout in your views by either setting the "Layout" property 
-    or changing your  _ViewStart.cshtml to use this layout
- *@
-
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     @*TODO: Change App name*@
-    <title>@ViewBag.Title - My ASP.NET Application</title>
+    <title>@ViewBag.Title - Library Management System</title>
 
     <meta content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no' name='viewport'>
     @*Source Sans Pro from Google Fonts*@
@@ -64,10 +57,7 @@
             </section><!-- /.content -->
         </div><!-- /.content-wrapper -->
         <footer class="main-footer">
-            <div class="pull-right hidden-xs">
-                <b>Version</b> 2.0
-            </div>
-            <strong>Copyright &copy; 2014-2015 <a href="http://almsaeedstudio.com">Almsaeed Studio</a>.</strong> All rights reserved.
+            <strong>Copyright &copy; 2017 Library Management System.</strong> All rights reserved.
         </footer>
     </div><!-- ./wrapper -->
     @* Bundles assume jquery 2.1.3 and Bootstrap 3 *@
