--- a/LMS/Views/Shared/_AdminLteLeftMenu.cshtml
+++ b/LMS/Views/Shared/_AdminLteLeftMenu.cshtml
@@ -1,16 +1,8 @@
-﻿@* 
- This partial controls the left menu of the AdminLTE dashboard and is called automatically by _AdminLteLayout
-    This is where you can add, modify, or remove navigation options in your app
-    TODO: This preserves the links as-is for the demo, which lead to broken pages!
-    It's up to you to make sure these links either get deleted or lead somewhere REAL!
-*@
-
-
-@{
+﻿@{
     Layout = null;
 }
 <aside class="main-sidebar">
-    <!-- sidebar: style can be found in sidebar.less -->
+    <!-- sidebar -->
     <section class="sidebar">
         <!-- Sidebar user panel -->
         <div class="user-panel">
@@ -22,17 +14,7 @@
                 <a href="#"><i class="fa fa-circle text-success"></i> Online</a>
             </div>
         </div>
-        <!-- search form -->
-        <form action="#" method="get" class="sidebar-form">
-            <div class="input-group">
-                <input type="text" name="q" class="form-control" placeholder="Search..." />
-                <span class="input-group-btn">
-                    <button type='submit' name='search' id='search-btn' class="btn btn-flat"><i class="fa fa-search"></i></button>
-                </span>
-            </div>
-        </form>
-        <!-- /.search form -->
-        <!-- sidebar menu: : style can be found in sidebar.less -->
+        <!-- sidebar menu -->
         <ul class="sidebar-menu">
             <li class="header">MAIN NAVIGATION</li>
             <li class="active treeview">
