--- a/LMS/Views/Shared/_AdminLteLeftMenu.cshtml
+++ b/LMS/Views/Shared/_AdminLteLeftMenu.cshtml
@@ -16,17 +16,20 @@
         </div>
         <!-- sidebar menu -->
         <ul class="sidebar-menu">
-            <li class="header">MAIN NAVIGATION</li>
+            <li class="header">Book Menu</li>
             <li><a href="~/Publishers"><i class="fa fa-book"></i> Publisher</a></li>
-            <li><a href="~/Authors"><i class="fa fa-pencil"></i> Author</a></li>
+            <li><a href="~/Authors"><i class="fa fa-user"></i> Author</a></li>
             <li><a href="~/Presses"><i class="fa fa-print"></i> Press</a></li>
             <li><a href="~/Categories"><i class="fa fa-bookmark"></i> Category</a></li>
+            <li><a href="~/Books"><i class="fa fa-book"></i> Books</a></li>
+            <li class="header">Member Menu</li>
             <li><a href="~/MembershipCategories"><i class="fa fa-th"></i> Membership Categories</a></li>
             <li><a href="~/Members"><i class="fa fa-users"></i> Members</a></li>
-            <li><a href="~/Books"><i class="fa fa-book"></i> Books</a></li>
+            <li class="header">Loan Menu</li>
             <li><a href="~/LoanTypes"><i class="fa fa-bank"></i> Loan Types</a></li>
-            <li><a href="~/Loans"><i class="fa fa-hand-o-left"></i> Loans</a></li>
-            <li><a href="~/Users"><i class="fa fa-user"></i> Users</a></li>
+            <li><a href="~/Loans"><i class="fa fa-usd"></i> Loans</a></li>
+            <li class="header">User Menu</li>
+            <li><a href="~/Users"><i class="fa fa-users"></i> Users</a></li>
         </ul>
     </section>
     <!-- /.sidebar -->
