--- a/LMS/Views/Shared/_TopMenu.cshtml
+++ b/LMS/Views/Shared/_TopMenu.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@using Microsoft.AspNet.Identity
+@{
     ViewBag.Layout = null;
 }
 
@@ -10,33 +11,37 @@
         <a href="#" class="sidebar-toggle" data-toggle="offcanvas" role="button">
             <span class="sr-only">Toggle navigation</span>
         </a>
-        <div class="navbar-custom-menu">
-            <ul class="nav navbar-nav">
-                <li class="dropdown user user-menu">
-                    <!-- Menu Toggle Button -->
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                        <!-- The user image in the navbar-->
-                        <img src="~//Content/img/user2-160x160.jpg" class="user-image" alt="User Image">
-                        <!-- hidden-xs hides the username on small devices so only the image appears. -->
-                        <span class="hidden-xs">Alexander Pierce</span>
-                    </a>
-                    <ul class="dropdown-menu">
-                        <!-- The user image in the menu -->
-                        <li class="user-header">
-                            <img src="~/Content/img/user2-160x160.jpg" class="img-circle" alt="User Image">
+        @if (Request.IsAuthenticated)
+        {
+            <div class="navbar-custom-menu">
+                <ul class="nav navbar-nav">
+                    <li class="dropdown user user-menu">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                            <img src="http://www.gravatar.com/avatar/?d=identicon&size=160" class="user-image" alt="User Image">
+                            <span class="hidden-xs">@User.Identity.GetUserName()</span>
+                        </a>
+                        <ul class="dropdown-menu">
+                            <!-- The user image in the menu -->
+                            <li class="user-header">
+                                <img src="http://www.gravatar.com/avatar/?d=identicon&size=160" class="img-circle" alt="User Image">
 
-                            <p>
-                                Alexander Pierce
-                            </p>
-                        </li>
-                        <li class="user-footer">
-                            <div class="pull-right">
-                                <a href="#" class="btn btn-default btn-flat">Sign out</a>
-                            </div>
-                        </li>
-                    </ul>
-                </li>
-            </ul>
-        </div>
+                                <p>
+                                    @User.Identity.GetUserName()
+                                </p>
+                            </li>
+                            <li class="user-footer">
+                                @using (Html.BeginForm())
+                                {
+                                    @Html.AntiForgeryToken()
+                                    <div class="pull-right">
+                                        <button type="submit" class="btn btn-default btn-flat">Sign out</button>
+                                    </div>
+                                }
+                            </li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+        }
     </nav>
 </header>
