--- a/LMS/Views/Books/Index.cshtml
+++ b/LMS/Views/Books/Index.cshtml
@@ -11,20 +11,43 @@
         <div class="box">
             <div class="box-header with-border">
                 <a class="btn btn-primary pull-right" href="@Url.Action("Create")"><i class="fa fa-plus"></i> Add</a>
+                @*<div class="box-header pull-left">
+                    
+                </div>*@
+            </div>
+            <div class="row">
+                <div class="col-sm-8" style="margin-left: 12px; margin-top:18px">
+                    @using (Html.BeginForm())
+                    {
+                        <p>
+                            @Html.TextBox("SearchString")
+                            <input type="submit" value="Search" />
+                        </p>
+                    }
+                </div>
+                <div class="col-sm-2 pull-right" style="margin-right:10px">
+                    Sort By
+                    <select class="form-control">
+                        <option id="1">Published Date</option>
+                    </select>
+                </div>
             </div>
             <div class="box-body">
                 <table class="table table-bordered">
 					<thead>
 						<tr>
 							<th>
-								@Html.DisplayNameFor(model => model.FirstOrDefault().Press.Name)
+								Press Name
 							</th>
 							<th>
-								@Html.DisplayNameFor(model => model.FirstOrDefault().Publisher.Name)
+								Publisher Name
 							</th>
 							<th>
-								@Html.DisplayNameFor(model => model.FirstOrDefault().Name)
+								Book Name
 							</th>
+                            <th>
+                                Number of Copies
+                            </th>
 							<th>
 								@Html.DisplayNameFor(model => model.FirstOrDefault().ISBN)
 							</th>
@@ -59,6 +82,9 @@
 								<td>
 									@Html.DisplayFor(modelItem => item.Name)
 								</td>
+                                <td>
+
+                                </td>
 								<td>
 									@Html.DisplayFor(modelItem => item.ISBN)
 								</td>
