--- a/LMS/Views/Shared/_LeftMenu.cshtml
+++ b/LMS/Views/Shared/_LeftMenu.cshtml
@@ -35,9 +35,9 @@
             <li class="header">User Menu</li>
             <li class="@(ViewContext.RouteData.Values["Controller"].ToString() == "Users" ? "active" : "")"><a href="~/Users"><i class="fa fa-users"></i> <span>Users</span></a></li>
             <li class="header">Reports</li>
-            <li class="@(ViewContext.RouteData.Values["Controller"].ToString() == "Publishers" ? "active" : "")"><a href="~/Reports"><i class="fa fa-file-text-o"></i> <span>Old Books</span></a></li>
-            <li class="@(ViewContext.RouteData.Values["Controller"].ToString() == "Publishers" ? "active" : "")"><a href="~/Reports"><i class="fa fa-bar-chart"></i> <span>Inactive Books</span></a></li>    
-            <li class="@(ViewContext.RouteData.Values["Controller"].ToString() == "Publishers" ? "active" : "")"><a href="~/Reports"><i class="fa fa-user-times"></i> <span>Inactive Members</span></a></li>          
+            <li class="@(ViewContext.RouteData.Values["Controller"].ToString() == "Publishers" ? "active" : "")"><a href="~/Reports/OldBooks.cshtml"><i class="fa fa-file-text-o"></i> <span>Old Books</span></a></li>
+            <li class="@(ViewContext.RouteData.Values["Controller"].ToString() == "Publishers" ? "active" : "")"><a href="~/Reports/InactiveBooks.cshtml"><i class="fa fa-bar-chart"></i> <span>Inactive Books</span></a></li>    
+            <li class="@(ViewContext.RouteData.Values["Controller"].ToString() == "Publishers" ? "active" : "")"><a href="~/Reports/InactiveMembers"><i class="fa fa-user-times"></i> <span>Inactive Members</span></a></li>          
         </ul>
     </section>
 </aside>
