--- a/LMS/Views/Reports/InactiveMembers.cshtml
+++ b/LMS/Views/Reports/InactiveMembers.cshtml
@@ -1,17 +1,10 @@
-﻿@model PagedList.IPagedList<LMS.Models.Member>
-@using PagedList.Mvc
-
-@{
-    ViewBag.Title ="Inactive Member";
-	ViewBag.TitleSmall = "All";
+﻿@{
+    ViewBag.Title ="Inactive Members";
 }
 
 <div class="row">
     <div class="col-md-12">
         <div class="box">
-            <div class="box-header with-border">
-                <a class="btn btn-primary pull-right" href="@Url.Action("Create")"><i class="fa fa-plus"></i> Add</a>
-            </div>
             <div class="box-body">
                 <table class="table table-bordered">
 					<thead>
@@ -37,29 +30,51 @@
 						</tr>
 					</thead>
 					<tbody>
-
-						@foreach (var item in Model) {
 							<tr>
 								<td>
-									@Html.DisplayFor(modelItem => item.FirstName)
+                                    Bla
 								</td>
 								<td>
-									@Html.DisplayFor(modelItem => item.LastName)
+                                    Bla
 								</td>
 								<td>
-									@Html.DisplayFor(modelItem => item.Address)
+                                    Bla
 								</td>
                                 <td>
-
+                                    Bla
+                                </td>
+                                <td>
+                                    Lorem Ipsum
+                                </td>
+                                <td>
+                                    34
                                 </td>
 							</tr>
-						}
+                        <tr>
+                            <td>
+                                Bla
+                            </td>
+                            <td>
+                                Bla
+                            </td>
+                            <td>
+                                Bla
+                            </td>
+                            <td>
+                                Bla
+                            </td>
+                            <td>
+                                Lorem Ipsum
+                            </td>
+                            <td>
+                                34
+                            </td>
+                        </tr>
 					</tbody>
 				</table>
 			</div>
 			<div class="box-footer clearfix">
                 <div class="pull-right">
-                    @Html.PagedListPager(Model, page => Url.Action("Index", new { page }))
                 </div>
             </div>
 		</div>
