--- a/LMS/Views/Reports/OldBooks.cshtml
+++ b/LMS/Views/Reports/OldBooks.cshtml
@@ -1,11 +1,4 @@
-﻿@model PagedList.IPagedList<LMS.Models.Book>
-@using PagedList.Mvc
-
-@{
-    ViewBag.Title = "Old Books";
-}
-
-<div class="row">
+﻿<div class="row">
     <div class="col-md-12">
         <div class="box">
             <div class="box-body">
@@ -27,32 +20,42 @@
 						</tr>
 					</thead>
 					<tbody>
-
-						@foreach (var item in Model) {
 							<tr>
 								<td>
-
+                                    1
 								</td>
 								<td>
-
+                                    Lorem Ipsum
 								</td>
 								<td>
-
+                                    2
 								</td>
                                 <td>
-
+                                    123
                                 </td>
 							</tr>
-						}
+                        <tr>
+                            <td>
+                                1
+                            </td>
+                            <td>
+                                Lorem Ipsum
+                            </td>
+                            <td>
+                                2
+                            </td>
+                            <td>
+                                123
+                            </td>
+                        </tr>
 					</tbody>
 				</table>
 			</div>
 			<div class="box-footer clearfix">
                 <div class="pull-right">
-                    <a class="btn btn-danger pull-right" href="@Url.Action("Delete")"><i class="fa fa-trash"></i> Delete</a>
+                    <a class="btn btn-danger pull-right" href="#"><i class="fa fa-trash"></i> Clear Old Books</a>
                 </div>
                 <div class="pull-right">
-                    @Html.PagedListPager(Model, page => Url.Action("OldBooks", new { page }))
                 </div>
             </div>
 		</div>
