--- a/LMS/Views/Authors/Index.cshtml
+++ b/LMS/Views/Authors/Index.cshtml
@@ -17,19 +17,19 @@
 					<thead>
 						<tr>
 							<th>
-								@Html.DisplayNameFor(model => model.FirstOrDefault().FirstName)
+								First Name
 							</th>
 							<th>
-								@Html.DisplayNameFor(model => model.FirstOrDefault().MiddleName)
+								Middle Name
 							</th>
 							<th>
-								@Html.DisplayNameFor(model => model.FirstOrDefault().LastName)
+								Last Name
 							</th>
 							<th>
-								@Html.DisplayNameFor(model => model.FirstOrDefault().LastUpdatedBy)
+								Last Updated By
 							</th>
 							<th>
-								@Html.DisplayNameFor(model => model.FirstOrDefault().LastUpdated)
+								Last Updated on
 							</th>
 							<th></th>
 						</tr>
