--- a/LMS/Views/BookCopies/Index.cshtml
+++ b/LMS/Views/BookCopies/Index.cshtml
@@ -11,15 +11,13 @@
         <div class="box">
             <div class="box-header with-border">
                 <a class="btn btn-primary pull-right" href="@Url.Action("Create")"><i class="fa fa-plus"></i> Add</a>
-                <div class="box-header pull-left">
-                    @using (Html.BeginForm())
-                    {
-                        <p>
-                            Search &nbsp;
-                            @Html.TextBox("SearchString")
-                            <input type="submit" value="Search" />
-                        </p>
-                    }
+                <div class="col-sm-4 pull-left" style="margin-left:-15px">
+                    <div class="input-group add-on">
+                        <input class="form-control" placeholder="Search" name="srch-term" id="srch-term" type="text">
+                        <div class="input-group-btn">
+                            <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="box-body">
@@ -27,22 +25,28 @@
 					<thead>
 						<tr>
 							<th>
-								@Html.DisplayNameFor(model => model.FirstOrDefault().Book.Name)
+								Book Name
+							</th>
+                            <th>
+                                Publisher Name
+                            </th>
+                            <th>
+                                Author Name
+                            </th>
+							<th>
+								Copy Number
 							</th>
 							<th>
-								@Html.DisplayNameFor(model => model.FirstOrDefault().CopyNumber)
+								Location
 							</th>
 							<th>
-								@Html.DisplayNameFor(model => model.FirstOrDefault().Location)
+								Available
 							</th>
 							<th>
-								@Html.DisplayNameFor(model => model.FirstOrDefault().Available)
+								Last Updated By
 							</th>
 							<th>
-								@Html.DisplayNameFor(model => model.FirstOrDefault().LastUpdatedBy)
-							</th>
-							<th>
-								@Html.DisplayNameFor(model => model.FirstOrDefault().LastUpdated)
+								Last Updated On
 							</th>
 							<th></th>
 						</tr>
@@ -54,6 +58,12 @@
 								<td>
 									@Html.DisplayFor(modelItem => item.Book.Name)
 								</td>
+                                <td>
+                                    Blabla
+                                </td>
+                                <td>
+                                    blabla
+                                </td>
 								<td>
 									@Html.DisplayFor(modelItem => item.CopyNumber)
 								</td>
