--- a/LMS/Views/Books/Index.cshtml
+++ b/LMS/Views/Books/Index.cshtml
@@ -11,19 +11,16 @@
         <div class="box">
             <div class="box-header with-border">
                 <a class="btn btn-primary pull-right" href="@Url.Action("Create")"><i class="fa fa-plus"></i> Add</a>
-                @*<div class="box-header pull-left">
-                    
-                </div>*@
             </div>
             <div class="row">
-                <div class="col-sm-8" style="margin-left: 12px; margin-top:18px">
-                    @using (Html.BeginForm())
-                    {
-                        <p>
-                            @Html.TextBox("SearchString")
-                            <input type="submit" value="Search" />
-                        </p>
-                    }
+                <div class="col-sm-4" style="margin-left: 12px; margin-top:18px">
+                    <div class="input-group add-on">
+                        <input class="form-control" placeholder="Search" name="srch-term" id="srch-term" type="text">
+                        <div class="input-group-btn">
+                            <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+                        </div>
+                    </div>
+                  
                 </div>
                 <div class="col-sm-2 pull-right" style="margin-right:10px">
                     Sort By
@@ -49,22 +46,22 @@
                                 Number of Copies
                             </th>
 							<th>
-								@Html.DisplayNameFor(model => model.FirstOrDefault().ISBN)
+								ISBN
 							</th>
 							<th>
-								@Html.DisplayNameFor(model => model.FirstOrDefault().PublishedDate)
+								Published Date
 							</th>
 							<th>
-								@Html.DisplayNameFor(model => model.FirstOrDefault().Charge)
+								Charge
 							</th>
 							<th>
-								@Html.DisplayNameFor(model => model.FirstOrDefault().PenaltyCharge)
+								Penalty Charge
 							</th>
 							<th>
-								@Html.DisplayNameFor(model => model.FirstOrDefault().LastUpdatedBy)
+								Last Updated By
 							</th>
 							<th>
-								@Html.DisplayNameFor(model => model.FirstOrDefault().LastUpdated)
+								Last Updated On
 							</th>
 							<th></th>
 						</tr>
