--- a/LMS/Views/Categories/Index.cshtml
+++ b/LMS/Views/Categories/Index.cshtml
@@ -17,16 +17,16 @@
 					<thead>
 						<tr>
 							<th>
-								@Html.DisplayNameFor(model => model.FirstOrDefault().Name)
+								Category Name
 							</th>
 							<th>
-								@Html.DisplayNameFor(model => model.FirstOrDefault().AgeRestricted)
+								Age Restriction
 							</th>
 							<th>
-								@Html.DisplayNameFor(model => model.FirstOrDefault().LastUpdatedBy)
+								Last Updated By
 							</th>
 							<th>
-								@Html.DisplayNameFor(model => model.FirstOrDefault().LastUpdated)
+								Last Updated On
 							</th>
 							<th></th>
 						</tr>
