--- a/LMS/Views/Members/Index.cshtml
+++ b/LMS/Views/Members/Index.cshtml
@@ -13,14 +13,13 @@
                 <a class="btn btn-primary pull-right" href="@Url.Action("Create")"><i class="fa fa-plus"></i> Add</a>
             </div>
             <div class="row">
-                <div class="col-sm-8" style="margin-left: 12px; margin-top:18px">
-                    @using (Html.BeginForm())
-                    {
-                        <p>
-                            @Html.TextBox("SearchString")
-                            <input type="submit" value="Search" />
-                        </p>
-                    }
+                <div class="col-sm-4" style="margin-left: 12px; margin-top:18px">
+                    <div class="input-group add-on">
+                        <input class="form-control" placeholder="Search" name="srch-term" id="srch-term" type="text">
+                        <div class="input-group-btn">
+                            <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+                        </div>
+                    </div>
                 </div>
                 <div class="col-sm-2 pull-right" style="margin-right:10px">
                     Sort
