Member Page Changes

--- a/LMS/Views/LoanTypes/Index.cshtml
+++ b/LMS/Views/LoanTypes/Index.cshtml
@@ -17,16 +17,16 @@
 					<thead>
 						<tr>
 							<th>
-								@Html.DisplayNameFor(model => model.FirstOrDefault().Name)
+								Loan Type Name
 							</th>
 							<th>
-								@Html.DisplayNameFor(model => model.FirstOrDefault().Duration)
+								Duration
 							</th>
 							<th>
-								@Html.DisplayNameFor(model => model.FirstOrDefault().LastUpdatedBy)
+								Last Updated By
 							</th>
 							<th>
-								@Html.DisplayNameFor(model => model.FirstOrDefault().LastUpdated)
+								Last Updated On
 							</th>
 							<th></th>
 						</tr>
