--- a/LMS/Views/Press/Index.cshtml
+++ b/LMS/Views/Press/Index.cshtml
@@ -17,13 +17,13 @@
 					<thead>
 						<tr>
 							<th>
-								@Html.DisplayNameFor(model => model.FirstOrDefault().Name)
+								Press Name
 							</th>
 							<th>
-								@Html.DisplayNameFor(model => model.FirstOrDefault().LastUpdatedBy)
+								Last Updated By
 							</th>
 							<th>
-								@Html.DisplayNameFor(model => model.FirstOrDefault().LastUpdated)
+								Last Updated On
 							</th>
 							<th></th>
 						</tr>
