--- a/LMS/Views/Members/LoanDetail.cshtml
+++ b/LMS/Views/Members/LoanDetail.cshtml
@@ -1,12 +1,4 @@
-﻿@model PagedList.IPagedList<LMS.Models.Loan>
-@using PagedList.Mvc
-
-@{
-    ViewBag.Title = "Member Loan Details";
-	ViewBag.TitleSmall = "All";
-}
-
-<div class="row">
+﻿<div class="row">
     <div class="col-md-12">
         <div class="box">
             <div class="box-body">
@@ -28,32 +20,23 @@
 						</tr>
 					</thead>
 					<tbody>
-
-						@foreach (var item in Model) {
 							<tr>
 								<td>
-	
+	                            1
 								</td>
 								<td>
-									
+								Marmik Shrestha	
 								</td>
 								<td>
-									
+								Lord of the Rings
 								</td>
 								<td>
-									
+								2	
 								</td>
-								
 							</tr>
-						}
 					</tbody>
 				</table>
 			</div>
-			<div class="box-footer clearfix">
-                <div class="pull-right">
-                    @Html.PagedListPager(Model, page => Url.Action("Index", new { page }))
-                </div>
-            </div>
 		</div>
 	</div>
 </div>
