--- a/LMS/Views/Memberships/Index.cshtml
+++ b/LMS/Views/Memberships/Index.cshtml
@@ -17,16 +17,16 @@
 					<thead>
 						<tr>
 							<th>
-								@Html.DisplayNameFor(model => model.FirstOrDefault().Name)
+								Membership Name
 							</th>
 							<th>
-								@Html.DisplayNameFor(model => model.FirstOrDefault().MaxLoans)
+								Maximum Loans
 							</th>
 							<th>
-								@Html.DisplayNameFor(model => model.FirstOrDefault().LastUpdatedBy)
+								Last Updated By
 							</th>
 							<th>
-								@Html.DisplayNameFor(model => model.FirstOrDefault().LastUpdated)
+								Last Updated On
 							</th>
 							<th></th>
 						</tr>
