Login Page and Requirement Enhances

--- a/LMS/Views/BookCopies/Details.cshtml
+++ b/LMS/Views/BookCopies/Details.cshtml
@@ -43,6 +43,31 @@
         </dd>
 
         <dt>
+            Loaned By
+        </dt>
+        <dd>
+            Woicezh Scheszney
+        </dd>
+        <dt>
+            Date Out
+        </dt>
+        <dd>
+            2017/03/03
+        </dd>
+        <dt>
+            Date Due
+        </dt>
+        <dd>
+            2017/03/10
+        </dd>
+        <dt>
+            Date Returned
+        </dt>
+        <dd>
+            -
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.LastUpdatedBy)
         </dt>
 
@@ -57,7 +82,6 @@
         <dd>
             @Html.DisplayFor(model => model.LastUpdated)
         </dd>
-
     </dl>
 </div>
 <p>
