--- a/LMS/Views/Members/Index.cshtml
+++ b/LMS/Views/Members/Index.cshtml
@@ -45,13 +45,13 @@
 								Last Name
 							</th>
 							<th>
-								@Html.DisplayNameFor(model => model.FirstOrDefault().DateOfBirth)
+								Date of Birth
 							</th>
 							<th>
-								@Html.DisplayNameFor(model => model.FirstOrDefault().Address)
+								Address
 							</th>
 							<th>
-								@Html.DisplayNameFor(model => model.FirstOrDefault().PhoneNumber)
+								Phone Number
 							</th>
                             <th>
                                 Active Loans
@@ -60,10 +60,10 @@
                                 Total Loans Allowed
                             </th>
 							<th>
-								@Html.DisplayNameFor(model => model.FirstOrDefault().LastUpdatedBy)
+								Last Updated By
 							</th>
 							<th>
-								@Html.DisplayNameFor(model => model.FirstOrDefault().LastUpdated)
+								Last Updated On
 							</th>
 							<th></th>
 						</tr>
@@ -107,6 +107,7 @@
 								</td>
 								<td>
 									<a class="btn btn-primary btn-sm" href="@Url.Action("Edit", new { id=item.ID })"><i class="fa fa-edit"> </i> Edit</a>
+                                    <a class="btn btn-warning btn-sm" href="@Url.Action("Details", new { id=item.ID })"><i class="fa fa-info"> </i> Details</a>
 									<a class="btn btn-danger btn-sm" href="@Url.Action("Delete", new { id=item.ID })"><i class="fa fa-trash"> </i> Delete</a>
 								</td>
 							</tr>
