--- a/LMS/Views/Members/LoanDetail.cshtml
+++ b/LMS/Views/Members/LoanDetail.cshtml
@@ -17,6 +17,9 @@
 							<th>
 							    Copy Number
 							</th>
+                            <th>
+                                Date Out
+                            </th>
 						</tr>
 					</thead>
 					<tbody>
@@ -33,7 +36,27 @@
 								<td>
 								2	
 								</td>
+                                <td>
+                                    2017-02-03
+                                </td>
 							</tr>
+                        <tr>
+                            <td>
+                                2
+                            </td>
+                            <td>
+                                Broove Macke
+                            </td>
+                            <td>
+                                Lorem Ipsum
+                            </td>
+                            <td>
+                                2
+                            </td>
+                            <td>
+                                2017-01-18
+                            </td>
+                        </tr>
 					</tbody>
 				</table>
 			</div>
