--- a/LMS/Views/BookCopies/Index.cshtml
+++ b/LMS/Views/BookCopies/Index.cshtml
@@ -2,7 +2,7 @@
 @using PagedList.Mvc
 
 @{
-    ViewBag.Title = "BookCopy";
+    ViewBag.Title = "Book Copy";
 	ViewBag.TitleSmall = "All";
 }
 
@@ -81,6 +81,7 @@
 								</td>
 								<td>
 									<a class="btn btn-primary btn-sm" href="@Url.Action("Edit", new { id=item.ID })"><i class="fa fa-edit"> </i> Edit</a>
+                                    <a class="btn btn-warning btn-sm" href="@Url.Action("Details", new { id=item.ID })"><i class="fa fa-info"> </i> Details</a>
 									<a class="btn btn-danger btn-sm" href="@Url.Action("Delete", new { id=item.ID })"><i class="fa fa-trash"> </i> Delete</a>
 								</td>
 							</tr>
