--- a/LMS/Views/Members/Details.cshtml
+++ b/LMS/Views/Members/Details.cshtml
@@ -4,85 +4,129 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
-
 <div>
-    <h4>Member</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Membership.Name)
-        </dt>
+    <div class="row">
+        <div class="col-sm-6">
+            <h4>Member</h4>
+            <hr />
+            <dl class="dl-horizontal">
+                <dt>
+                    @Html.DisplayNameFor(model => model.Membership.Name)
+                </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Membership.Name)
-        </dd>
+                <dd>
+                    @Html.DisplayFor(model => model.Membership.Name)
+                </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.FirstName)
-        </dt>
+                <dt>
+                    @Html.DisplayNameFor(model => model.FirstName)
+                </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.FirstName)
-        </dd>
+                <dd>
+                    @Html.DisplayFor(model => model.FirstName)
+                </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.MiddleName)
-        </dt>
+                <dt>
+                    @Html.DisplayNameFor(model => model.MiddleName)
+                </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.MiddleName)
-        </dd>
+                <dd>
+                    @Html.DisplayFor(model => model.MiddleName)
+                </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.LastName)
-        </dt>
+                <dt>
+                    @Html.DisplayNameFor(model => model.LastName)
+                </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.LastName)
-        </dd>
+                <dd>
+                    @Html.DisplayFor(model => model.LastName)
+                </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.DateOfBirth)
-        </dt>
+                <dt>
+                    @Html.DisplayNameFor(model => model.DateOfBirth)
+                </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.DateOfBirth)
-        </dd>
+                <dd>
+                    @Html.DisplayFor(model => model.DateOfBirth)
+                </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Address)
-        </dt>
+                <dt>
+                    @Html.DisplayNameFor(model => model.Address)
+                </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Address)
-        </dd>
+                <dd>
+                    @Html.DisplayFor(model => model.Address)
+                </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.PhoneNumber)
-        </dt>
+                <dt>
+                    @Html.DisplayNameFor(model => model.PhoneNumber)
+                </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.PhoneNumber)
-        </dd>
+                <dd>
+                    @Html.DisplayFor(model => model.PhoneNumber)
+                </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.LastUpdatedBy)
-        </dt>
+                <dt>
+                    @Html.DisplayNameFor(model => model.LastUpdatedBy)
+                </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.LastUpdatedBy)
-        </dd>
+                <dd>
+                    @Html.DisplayFor(model => model.LastUpdatedBy)
+                </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.LastUpdated)
-        </dt>
+                <dt>
+                    @Html.DisplayNameFor(model => model.LastUpdated)
+                </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.LastUpdated)
-        </dd>
+                <dd>
+                    @Html.DisplayFor(model => model.LastUpdated)
+                </dd>
 
-    </dl>
+            </dl>
+        </div>
+        <div class="col-sm-6">
+            <h4>Recent Loan</h4>
+            <table class="table table-bordered">
+                <thead>
+                    <tr>
+                        <th>
+                            Book Name
+                        </th>
+                        <th>
+                            Copy Number
+                        </th>
+                        <th>
+                            Date Out
+                        </th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>
+                            Lorem Ipsum Lorem
+                        </td>
+                        <td>
+                            3
+                        </td>
+                        <td>
+                            2017/04/03
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            Scorpion King
+                        </td>
+                        <td>
+                            1
+                        </td>
+                        <td>
+                            2017/04/11
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+</div>
+    </div>
 </div>
 <p>
     @Html.ActionLink("Edit", "Edit", new { id = Model.ID }) |
