--- a/LMS/Views/Books/Create.cshtml
+++ b/LMS/Views/Books/Create.cshtml
@@ -34,6 +34,21 @@
 						</div>
 					</div>
 
+                    <div class="form-group">
+                        <div class="col-sm-2"><b>Author</b></div>
+                        <div class="col-sm-10">
+                            <select multiple class="form-control">
+                                <option>Lorem Ipsum</option>
+                                <option>ipsum Lorem</option>
+                                <option>option 3</option>
+                                <option>option 4</option>
+                                <option>option 5</option>
+                            </select>
+
+                        </div>
+                    </div>
+
+
 					<div class="form-group">
 						@Html.LabelFor(model => model.PublisherID, "PublisherID", htmlAttributes: new { @class = "control-label col-sm-2" })
 						<div class="col-sm-10">
